# Quaternions

./: .gitignore  LICENSE.md  README.md  README.rst  _config.yml  h_quaternions.py  pyproject.toml  qmath.py  quaternions.py  setup.cfg
assets/css/: style.scss
docs/: .gitignore
docs/source/: conf.py  index.rst  install.rst  overview.rst  reference.rst  support.rst
docs/source/_static/css/: custom.css
docs/source/reference/: qmath.rst  quaternion_class.rst
quaternions/: __init__.py  qmath.py  quaternions.py
source/quaternions/: __init__.py  _misc.py  qmath.py  quaternions.py
tests/: test_qmath.py  test_quaternions.py
