[metadata]
name = quaternions-for-python
version = 1.0.0
author = Zachary Chartrand
author_email = zachartrand999@gmail.com
description = A module for using quaternions in Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zachartrand/Quaternions
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.8
