[metadata]
name = quaternions-for-python
version = 1.1.1
author = Zach Chartrand
author_email = zachartrand999@gmail.com
description = A module for using quaternions in Python.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/zachartrand/Quaternions
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.8
